[package]
name = "learningRust"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
log = "0.4.21"
serde_json = "1.0.117"